# STM32-based-classroom-access-control-management-system

./: README.md
Qt/RFID_Work/: CMakeLists.txt  main.cpp
Qt/RFID_Work/Src/: Main.cpp  Main.h  Main.ui  MySQL_X.cpp  MySQL_X.h  MyTCP.cpp  MyTCP.h
Qt/RFID_Work/UI/: InfoInquiry.cpp  InfoInquiry.h  InfoInquiry.ui  Login.cpp  Login.h  Login.ui  Registered.cpp  Registered.h  Registered.ui
STM32/RFID/HARDWAVE/: PWM.c  PWM.h  RC522.c  RC522.h  gpio.c  gpio.h  key.c  key.h  lcd.c  lcd.h  lcdfont.h  nbiot.c  nbiot.h
STM32/RFID/SYSTEM/delay/: delay.c
STM32/RFID/SYSTEM/timer/: timer.c  timer.h
STM32/RFID/SYSTEM/usart/: usart.c  usart.h
STM32/RFID/USER/: 5.5.1-STM32-RS485传感器.uvguix.35136  5.5.1-STM32-RS485传感器.uvguix.45213  5.5.1-STM32-RS485传感器.uvguix.Administrator  5.5.1-STM32-RS485传感器.uvguix.IOT2022  5.5.1-STM32-RS485传感器.uvguix.Kiana  5.5.1-STM32-RS485传感器.uvguix.Lenovo  5.5.1-STM32-RS485传感器.uvguix.Xuhao  5.5.1-STM32-RS485传感器.uvoptx  5.5.1-STM32-RS485传感器.uvprojx  JLinkLog.txt  main.c
STM32/RFID/USER/Listings/: Template.map  startup_stm32f10x_hd.lst
